<resources>
    <string name="app_name">Popular Movies</string>

    <string name="action_sort_order">Ordenação</string>
    <string name="pref_sort_order_label">Ordenação</string>
    <string name="pref_sort_order_key">sort_order</string>

    <string name="pref_sort_order_default">@string/pref_sort_order_highest_rated</string>
    <string name="pref_sort_order_default_label">@string/pref_sort_order_highest_rated_label</string>

    <string name="pref_sort_order_highest_rated_label">Melhores avaliados</string>
    <string name="pref_sort_order_highest_rated">top_rated</string>

    <string name="pref_sort_order_most_popular_label">Mais populares</string>
    <string name="pref_sort_order_most_popular">popular</string>

    <string name="pref_sort_order_now_playing_label">Em cartaz</string>
    <string name="pref_sort_order_now_playing">now_playing</string>

    <string name="pref_sort_order_upcoming_label">Futuros lançamentos</string>
    <string name="pref_sort_order_upcoming">upcoming</string>

    <string name="pref_sort_order_favorites_label">Favoritos</string>
    <string name="pref_sort_order_favorites">favorites</string>

    <string name="title_activity_settings">Settings</string>
    <string name="no_internet_connection">Sem conexão de internet :-(</string>
    <string name="movie_details">Detalhes do filme</string>
    <string name="release_date_label">Lançamento</string>
    <string name="users_rating_label">Avaliação do usuários</string>

    <string name="sync_account_type">popularmovies.fabioluis.com.br</string>
    <string name="content_authority">br.com.fabioluis.popularmovies</string>

    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification</string>

    <!-- Strings related to Notification Enabled preference -->
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Receber notificações</string>
    <string name="pref_enable_notifications_true">Sim</string>
    <string name="pref_enable_notifications_false">Não</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>

    <string name="popular_movies_updated">Filmes atualizados!</string>

    <string name="nenhum_filme_encontrado_nesta_lista">Não encontramos nenhum filme nesta categoria :-(</string>
    <string name="notificacoes_desabilitadas">Notificações desabilitadas</string>
    <string name="notificacoes_habilitadas">Notificações habilitadas</string>
    <!-- http://stackoverflow.com/questions/24552233/how-do-i-give-space-in-between-text-in-textview -->
    <string name="autor">Autor:&#160;</string>
    <string name="reviews">Reviews</string>
    <string name="favorito">Favorito</string>
    <string name="trailers">Trailers</string>
    <string name="action_share">compartilhar</string>
    <string name="receber_notifica">Receber notificações</string>
</resources>
